# AD

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: api.md  contributing.md  index.md  installation.md  usage.md
src/: __init__.py  example.py
tests/: __init__.py  test_example.py
