[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-app"
version = "0.1.0"
description = "Una aplicación de ejemplo con PyMdocs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "IMateos92", email = "your-email@example.com"}
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
    "pymdown-extensions>=10.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/IMateos92/AD"
Documentation = "https://github.com/IMateos92/AD"
Repository = "https://github.com/IMateos92/AD.git"
